@@ -1,3 +1,10 @@
+2007-12-13 Denis Barbier <barbier@linuxfr.org>
+
+	* src/meshconvert/generic.py
+	  src/meshconvert/mesh.py
+	  src/meshconvert/unv.py: Add an optional 'string' argument to
+	__init__() to allow using StringIO.
+
 2007-12-12 Denis Barbier <barbier@linuxfr.org>
 
 	* src/meshconvert/generic.py (getline): Blank lines
